--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
-            if (username === "Khaleel" && password === "Khaleel") {
+            if (username === "Khaleels" && password === "Khaleels") {
                 // Hide login page and show codegen page
                 document.getElementById('loginPage').style.display = 'none';
                 document.getElementById('codegenPage').style.display = 'block';
