--- a/index.html
+++ b/index.html
@@ -87,10 +87,7 @@
 
     <!-- Login Page -->
     <div id="loginPage" class="container">
-        <h2>Login</h2>
-        <input type="text" id="username" placeholder="Username">
-        <input type="password" id="password" placeholder="Password">
-        <button id="loginBtn">Login</button>
+        unable to access this page at this moment please contact your administrator 
     </div>
 
     <!-- Code Generator Page (hidden initially) -->
