--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 
     <!-- Login Page -->
     <div id="loginPage" class="container">
+       <h2>CodeGen.Ai</h2>
        <h2>Login</h2>
          <input type="text" id="username" placeholder="Username">
          <input type="password" id="password" placeholder="Password">
