--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
-            if (username === "khaleel" && password === "6309434904") {
+            if (username === "khaleel" && password === "63fieuxbsi#+@-4904") {
                 // Hide login page and show codegen page
                 document.getElementById('loginPage').style.display = 'none';
                 document.getElementById('codegenPage').style.display = 'block';
