--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
 
         header {
-            background-color: #0078d7;
+            background-color: #red;
             color: white;
             width: 100%;
             text-align: center;
@@ -96,19 +96,9 @@
 
     <!-- Code Generator Page (hidden initially) -->
     <div id="codegenPage" class="container">
-        <header>Code Generator</header>
-        <h2>Generate PowerShell Code</h2>
-        <input type="text" id="folderPath" placeholder="Enter Folder Path">
-        <input type="text" id="loanNumber" placeholder="Enter Loan Number">
-        <button id="generateBtn">Generate Code</button>
-        <textarea id="output" readonly placeholder="Generated code will appear here..."></textarea>
-        <h3>Instructions:</h3>
-        <h2>Enter Folder path, Loan number and click generate code</h2>
-        <h2>Copy the code and paste in powershell click enter</h2>
-        <h2>Refresh the page and login again </h2>
-        <h6>copy rights @ khaleel_s</h6>
-    </div>
-
+        <header>Oooppss, This page not available please contact your Administrator!!!!!
+ </header>
+        
     <script>
         // Function to handle login
         document.getElementById('loginBtn').addEventListener('click', function () {
